--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a href="#" class="navbar-brand">
+        <a [routerLink]="['/']" class="navbar-brand">
         	<div class="cont-logo">
 	        	<img class="logo" src="../../images/logo.png">
 	        	Football
@@ -17,65 +17,18 @@
     <!-- Collection of nav links, forms, and other content for toggling -->
     <div id="navbarCollapse" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Jornadas</a></li>
+            <li routerLinkActive="active"><a [routerLink]="['/Jornadas']">Jornadas</a></li>
             <li><a href="#">Clasificación</a></li>
-            <li class="dropdown">
-                <a data-toggle="dropdown" class="dropdown-toggle" href="#">Competiciones<b class="caret"></b></a>
-                <ul role="menu" class="dropdown-menu">
-                    <li><a href="#">Inbox</a></li>
-                    <li><a href="#">Drafts</a></li>
-                    <li><a href="#">Sent Items</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Trash</a></li>
-                </ul>
-            </li>
         </ul>
+
         <form role="search" class="navbar-form navbar-right">
-            <div class="form-group">
-                <input type="text" placeholder="Search" class="form-control">
-            </div>
+            <select class="form-control">
+                <option>LFP</option>
+                <option>Ketchup</option>
+                <option>Relish</option>
+            </select>
+
         </form>
     </div>
 </nav>
 
-<div class="container">
-  <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="../../images/1.jpg" alt="Chania">
-      </div>
-
-      <div class="item">
-        <img src="../../images/2.jpg" alt="Chania">
-      </div>
-    
-      <div class="item">
-        <img src="../../images/3.jpg" alt="Flower">
-      </div>
-
-      <div class="item">
-        <img src="../../images/4.jpg" alt="Flower">
-      </div>
-    </div>
-
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
