--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -7,3 +7,16 @@
 .navbar-brand{
 	padding: 10px 10px;
 }
+
+.leagueIcon{
+	float: right;
+	margin-top: 12px;
+	margin-right: 10px;
+	width: 25px;
+}
+
+@media only screen and (min-width: 767px) {
+    .leagueIcon{
+    	display: none;
+    }
+}
