--- a/src/app/clasificacion/clasificacion.component.html
+++ b/src/app/clasificacion/clasificacion.component.html
@@ -7,7 +7,7 @@
     <li (click)="tabs(2)" [class.active]="act===2"><a href="javascript:void(0)">Fuera</a></li>
 </ul>
 <div class="table-responsive" [hidden]="n==0">
-  <table class="table">
+  <table class="table" *ngIf="orderClasif" >
     <thead>
       <tr>
         <th>Pos.</th>
@@ -21,14 +21,14 @@
         <th>G.C.</th>
       </tr>
     </thead>
-    <tfoot *ngIf="orderClasif">
+    <tbody *ngFor="let team of orderClasif let i=index">
       <tr [ngClass]="{
       info: team.pos<7 && team.pos>4,
       danger: team.pos>17,
       success:team.pos<5
-      }" *ngFor="let team of orderClasif">
+      }"  data-toggle="modal" attr.data-target="#{{i}}"  >
         <th>{{team.pos}}</th>
-        <th><img src="{{team.img}}">{{team.name}}</th>
+        <th><img src="{{team.img}}"><a href="javascript:void(0)">{{team.name}}</a></th>
         <th>{{team.pts}}</th>
         <th>{{team.pg}}</th>
         <th>{{team.win}}</th>
@@ -36,7 +36,33 @@
         <th>{{team.lose}}</th>
         <th>{{team.goal}}</th>
         <th>{{team.goalAg}}</th>
-        </tr>
-    </tfoot>
+
+
+      </tr>
+      <div *ngFor="let value of listTeams[0].teams">
+      <div class="modal fade" attr.id="{{i}}" role="dialog" *ngIf="value.name===team.name">
+        <div class="modal-dialog" >
+        
+          <!-- Modal content-->
+          <div class="modal-content" >
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">{{team.name}}</h4>
+            </div>
+            <div class="modal-body">
+              <div >
+                <img class="modalimg" src="{{team.img}}">
+                <p>Presupuesto: {{value.squadMarketValue}}</p>
+              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      </div>
+
+    </tbody>
   </table>
 </div>
