fixed problem https

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,10 +7,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <img class="leagueIcon" src="../images/competiciones/{{competition}}.png">
+        <img class="leagueIcon" src="assets/competiciones/{{competition}}.png">
         <a [routerLink]="['/']" class="navbar-brand">
         	<div class="cont-logo">
-	        	<img class="logo" src="../../images/logo.png">
+	        	<img class="logo" src="assets/logo.png">
 	        	Football
         	</div>
         </a>
