--- a/src/app/slider/slider.component.html
+++ b/src/app/slider/slider.component.html
@@ -12,19 +12,19 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="../../images/1.jpg" alt="Chania">
+        <img src="assets/1.jpg" alt="Chania">
       </div>
 
       <div class="item">
-        <img src="../../images/2.jpg" alt="Chania">
+        <img src="assets/2.jpg" alt="Chania">
       </div>
     
       <div class="item">
-        <img src="../../images/3.jpg" alt="Flower">
+        <img src="assets/3.jpg" alt="Flower">
       </div>
 
       <div class="item">
-        <img src="../../images/4.jpg" alt="Flower">
+        <img src="assets/4.jpg" alt="Flower">
       </div>
     </div>
 
